0.7.6
=====.
-File organization
-RENAMED EVERY PLACABLE TILE FOR BETTER DISTINGUISMENT. THIS CHANGE WILL RESULT IN ALL PYLON OF NIGHT AND INFECTED SNOW ITEMS IN THE WORLD TO BE CONSIDERED INVALID. MANY APOLOGIES FOR THIS.

-Added a config option to customize the brightness of walls when they are highlighted by the biome sight potion.
-Added mod compat with 'Terraria Origins' and 'AltLibrary'
-Added an experimental config option to bring back demon altars spawning in infected blocks
-Added infected variants of moss and gemstone blocks and a config option to disable them respectively
-Added a config header for client
-Added a background color for client-side config
-Added Russian translation. Credit goes to alinahvoshch
-Added custom textures for infected snow trees.
-Added pureglow compability for 'SpiritMod'

-Infected cave walls now get highlighted by biome sight potions and spread infections. However they won't convert other cave walls
-Chlorophyte infection preventation now goes back to normal if 'InfectedBiomes' config is turned off
-Hallow theme now plays in the Hallowed jungle, can be disabled in the config
-Jungle spores now grow in infected jungles

-Fixed description typo, and added missing features to the description. Also removed comment about Radiance mod compat, since it had no point in existing
-Fixed vertebrae --> leather recipe not needing workbench. Also fixed duplicate recipe when used with Thorium mod

0.7.1
=====
-Initial Release